--- a/06-DOM/html/index-Example.html
+++ b/06-DOM/html/index-Example.html
@@ -28,27 +28,27 @@
     <div class="container">
         <div id="main" class="card card-body">
             <h2 class="title">Add Items</h2>
-            <form id="formAdd" class="form-inline mb-3">
-                <input type="text" id="txtItem" autocomplete="off" class="form-control mr-2">
+            <form class="form-inline mb-3">
+                <input type="text" class="form-control mr-2">
                 <input type="submit" class="btn btn-dark" value="Submit">
             </form>
             <h2 class="title">Items</h2>
             <ul id="items" class="list-group">
                 <li class="list-group-item">
                     Javascript
-                    <button class="btn btn-danger btn-sm float-right delete">X</button>
+                    <button class="btn btn-danger btn-sm float-right">X</button>
                 </li>
                 <li class="list-group-item">
                     Node JS
-                    <button class="btn btn-danger btn-sm float-right delete">X</button>
+                    <button class="btn btn-danger btn-sm float-right">X</button>
                 </li>
                 <li class="list-group-item">
                     Angular
-                    <button class="btn btn-danger btn-sm float-right delete">X</button>
+                    <button class="btn btn-danger btn-sm float-right">X</button>
                 </li>
                 <li class="list-group-item">
                     Net Core
-                    <button class="btn btn-danger btn-sm float-right delete">X</button>
+                    <button class="btn btn-danger btn-sm float-right">X</button>
                 </li>
             </ul>
         </div>
